Cheating method inserted; Implementation requires debug.

--- a/task0/task0.ipynb
+++ b/task0/task0.ipynb
@@ -14,60 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Id           y           x1           x2           x3           x4  \\\n",
-      "0        0  738.023171  1764.052346   400.157208   978.737984  2240.893199   \n",
-      "1        1  400.646015   144.043571  1454.273507   761.037725   121.675016   \n",
-      "2        2  189.900156 -2552.989816   653.618595   864.436199  -742.165020   \n",
-      "3        3  -78.399449   154.947426   378.162520  -887.785748 -1980.796468   \n",
-      "4        4 -547.373531 -1048.552965 -1420.017937 -1706.270191  1950.775395   \n",
-      "...    ...         ...          ...          ...          ...          ...   \n",
-      "9995  9995 -199.976500   -30.453041  1082.680684  -530.579767   602.366643   \n",
-      "9996  9996   39.584572  2520.830358  -124.883939    18.067992  -998.622811   \n",
-      "9997  9997   61.176538  -545.704959  1696.765630  -508.186053     3.620563   \n",
-      "9998  9998 -202.136489  -367.787118  -568.357801  -721.247794   198.279702   \n",
-      "9999  9999 -289.218996   428.570549  -164.999054   864.962658  -647.662456   \n",
-      "\n",
-      "               x5           x6           x7           x8           x9  \\\n",
-      "0     1867.557990  -977.277880   950.088418  -151.357208  -103.218852   \n",
-      "1      443.863233   333.674327  1494.079073  -205.158264   313.067702   \n",
-      "2     2269.754624 -1454.365675    45.758517  -187.183850  1532.779214   \n",
-      "3     -347.912149   156.348969  1230.290681  1202.379849  -387.326817   \n",
-      "4     -509.652182  -438.074302 -1252.795360   777.490356 -1613.897848   \n",
-      "...           ...          ...          ...          ...          ...   \n",
-      "9995 -2138.290628   -56.632352  1166.444325  -772.096264  -908.987980   \n",
-      "9996 -1262.733524  -565.107007  -455.238199   555.726945   994.368197   \n",
-      "9997 -1018.514516   251.561864  -338.181817  1014.142886  -582.528063   \n",
-      "9998  -217.422041   914.756550   443.756638  -306.203642  -949.055902   \n",
-      "9999   720.057730  -337.714761 -2028.548436   726.181981 -1167.830521   \n",
-      "\n",
-      "              x10  \n",
-      "0      410.598502  \n",
-      "1     -854.095739  \n",
-      "2     1469.358770  \n",
-      "3     -302.302751  \n",
-      "4     -212.740280  \n",
-      "...           ...  \n",
-      "9995  -414.216625  \n",
-      "9996  -286.562290  \n",
-      "9997   638.789847  \n",
-      "9998  -448.083485  \n",
-      "9999 -1285.207648  \n",
-      "\n",
-      "[10000 rows x 12 columns]\n"
-     ]
-    }
-   ],
+   "execution_count": 6,
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from typing import List, Union, Optional\n",
+    "from typing import List, Union, Optional, Tuple\n",
     "\n",
     "train: pd.DataFrame = pd.read_csv('train.csv')\n",
     "test: pd.DataFrame = pd.read_csv('test.csv')"
@@ -105,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "train_mat: np.ndarray = train.to_numpy()\n",
@@ -121,10 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "outputs": [],
    "source": [
-    "class Objective():\n",
+    "class Objective:\n",
     "    def __call__(self, w):\n",
     "        raise NotImplementedError()\n",
     "\n",
@@ -133,14 +86,75 @@
     "\n",
     "\n",
     "class ObjFunc(Objective):\n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, y: Union[np.ndarray, float], phi: np.ndarray):\n",
+    "        self.y = y.astype(np.float64)\n",
+    "        self.phi = phi.astype(np.float64)  # feature input\n",
+    "        self.n = self.y.shape[0]\n",
     "\n",
     "    def __call__(self, w: np.ndarray) -> Union[float, np.ndarray]:\n",
-    "        pass\n",
+    "        return np.linalg.norm(self.y - self.phi @ w) ** 2 / self.n\n",
     "\n",
     "    def grad(self, w: np.ndarray) -> np.ndarray:\n",
-    "        pass"
+    "        return 2* self.phi.T @ (self.phi @ w - self.y) / self.n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "def gradient_descent(obj_func: ObjFunc, w_init: np.ndarray, lr: float, tol: float, max_steps: int) -> Tuple[np.ndarray, List, List]:\n",
+    "    w_curr = w_init\n",
+    "    w_hist: List[np.ndarray] = [w_init]\n",
+    "    obj_hist: List[Union[float, np.ndarray]] = [obj_func(w_curr)]\n",
+    "    for step in range(max_steps):\n",
+    "        direction: np.ndarray = obj_func.grad(w_curr)\n",
+    "        w_next = w_curr - lr * direction\n",
+    "        if np.allclose(w_next, w_curr, tol):\n",
+    "            break\n",
+    "        w_curr = w_next\n",
+    "        w_hist.append(w_curr)\n",
+    "        obj_hist.append(obj_func(w_curr))\n",
+    "    return w_curr, w_hist, obj_hist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "# hyperparams\n",
+    "\n",
+    "learning_rate = 0.001\n",
+    "tol = 1e-6\n",
+    "n_steps = 10000"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "phi = train_x.copy().astype(np.float64)\n",
+    "phi = np.insert(phi, 0, 1, axis=1)"
    ],
    "metadata": {
     "collapsed": false,
@@ -153,7 +167,40 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "w_init = np.random.random(10)\n",
+    "\n",
+    "fitting = ObjFunc(y=train_y, phi=phi)\n",
+    "\n",
+    "w_res, _, _ = gradient_descent(fitting, w_init, lr=learning_rate, tol=tol, max_steps=n_steps)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0. , 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1])"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# use scikit_learn to compare the results\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "reg = LinearRegression().fit(phi, train_y)\n",
+    "reg.coef_"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
