--- a/task0/task0.ipynb
+++ b/task0/task0.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -74,18 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "outputs": [],
    "source": [
-    "class Objective:\n",
-    "    def __call__(self, w):\n",
-    "        raise NotImplementedError()\n",
+    "# class Objective:\n",
+    "#     def __call__(self, w):\n",
+    "#         raise NotImplementedError()\n",
+    "#\n",
+    "#     def grad(self, w):\n",
+    "#         raise NotImplementedError()\n",
     "\n",
-    "    def grad(self, w):\n",
-    "        raise NotImplementedError()\n",
-    "\n",
-    "\n",
-    "class ObjFunc(Objective):\n",
+    "class ObjFunc:\n",
     "    def __init__(self, y: Union[np.ndarray, float], phi: np.ndarray):\n",
     "        self.y = y.astype(np.float64)\n",
     "        self.phi = phi.astype(np.float64)  # feature input\n",
@@ -95,7 +94,17 @@
     "        return np.linalg.norm(self.y - self.phi @ w) ** 2 / self.n\n",
     "\n",
     "    def grad(self, w: np.ndarray) -> np.ndarray:\n",
-    "        return 2* self.phi.T @ (self.phi @ w - self.y) / self.n"
+    "        return 2* self.phi.T @ (self.phi @ w - self.y) / self.n\n",
+    "\n",
+    "class ObjFuncSDG(ObjFunc):\n",
+    "    def __init__(self, y: Union[np.ndarray, float], phi: np.ndarray):\n",
+    "        super().__init__(y, phi)\n",
+    "\n",
+    "    def __call__(self, w: np.ndarray, indices: np.ndarray) -> Union[float, np.ndarray]:\n",
+    "        return np.linalg.norm(self.y[indices] - self.phi[indices, :] @ w) ** 2 / indices.shape[0]\n",
+    "\n",
+    "    def grad(self, w: np.ndarray, indices: np.ndarray) -> np.ndarray:\n",
+    "        return 2* self.phi[indices, :].T @ (self.phi[indices, :] @ w - self.y[indices]) / indices.shape[0]"
    ],
    "metadata": {
     "collapsed": false,
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def gradient_descent(obj_func: ObjFunc, w_init: np.ndarray, lr: float, tol: float, max_steps: int) -> Tuple[np.ndarray, List, List]:\n",
@@ -135,11 +144,19 @@
    "execution_count": 12,
    "outputs": [],
    "source": [
-    "# hyperparams\n",
-    "\n",
-    "learning_rate = 0.001\n",
-    "tol = 1e-6\n",
-    "n_steps = 10000"
+    "def sgd(obj_func: ObjFuncSDG, w_init: np.ndarray, lr: float, tol: float, n_epoch: int, batch_size: int) -> np.ndarray:\n",
+    "    w_curr = w_init\n",
+    "    for epoch in range(n_epoch):\n",
+    "        rand_idx: np.ndarray = np.array([x for x in range(obj_func.n)], dtype=int)\n",
+    "        np.random.shuffle(rand_idx)\n",
+    "        for i in range(0, obj_func.n, batch_size):\n",
+    "            batch_idx: np.ndarray = rand_idx[i * batch_size: (i + 1) * batch_size]\n",
+    "            direction: np.ndarray = obj_func.grad(w_curr, batch_idx)\n",
+    "            w_next = w_curr - lr * direction\n",
+    "            if np.allclose(w_next, w_curr, tol):\n",
+    "                return w_next\n",
+    "            w_curr = w_next\n",
+    "    return w_next\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -150,7 +167,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "# hyperparams\n",
+    "\n",
+    "learning_rate = 0.001\n",
+    "tol = 1e-6\n",
+    "n_steps = 10000\n",
+    "\n",
+    "batch_size = 16\n",
+    "num_of_epochs = 5"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "phi = train_x.copy().astype(np.float64)\n",
@@ -165,14 +203,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (0,16) (0,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-13-6b3fc1c9986e>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;31m# w_res, _, _ = gradient_descent(fitting, w_init, lr=learning_rate, tol=tol, max_steps=n_steps)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 6\u001B[0;31m \u001B[0mw_res\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0m_\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0m_\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0msgd\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfitting\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mw_init\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mlr\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mlearning_rate\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mtol\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mtol\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mn_epoch\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mnum_of_epochs\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mbatch_size\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mbatch_size\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;32m<ipython-input-12-dbda01da38fc>\u001B[0m in \u001B[0;36msgd\u001B[0;34m(obj_func, w_init, lr, tol, n_epoch, batch_size)\u001B[0m\n\u001B[1;32m      6\u001B[0m         \u001B[0;32mfor\u001B[0m \u001B[0mi\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mobj_func\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mn\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mbatch_size\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      7\u001B[0m             \u001B[0mbatch_idx\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mndarray\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mrand_idx\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mi\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mbatch_size\u001B[0m \u001B[0;34m:\u001B[0m \u001B[0;34m(\u001B[0m\u001B[0mi\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;36m1\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mbatch_size\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 8\u001B[0;31m             \u001B[0mdirection\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mndarray\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mobj_func\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mgrad\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mw_curr\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mbatch_idx\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      9\u001B[0m             \u001B[0mw_next\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mw_curr\u001B[0m \u001B[0;34m-\u001B[0m \u001B[0mlr\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mdirection\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     10\u001B[0m             \u001B[0;32mif\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mallclose\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mw_next\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mw_curr\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mtol\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m<ipython-input-10-56989b56e76a>\u001B[0m in \u001B[0;36mgrad\u001B[0;34m(self, w, indices)\u001B[0m\n\u001B[1;32m     26\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     27\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0mgrad\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mw\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mndarray\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mindices\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mndarray\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m->\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mndarray\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 28\u001B[0;31m         \u001B[0;32mreturn\u001B[0m \u001B[0;36m2\u001B[0m\u001B[0;34m*\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mphi\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mindices\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m:\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mT\u001B[0m \u001B[0;34m@\u001B[0m \u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mphi\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mindices\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m:\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m@\u001B[0m \u001B[0mw\u001B[0m \u001B[0;34m-\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0my\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mindices\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m/\u001B[0m \u001B[0mindices\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mshape\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m: operands could not be broadcast together with shapes (0,16) (0,) "
+     ]
+    }
+   ],
    "source": [
-    "w_init = np.random.random(10)\n",
+    "w_init = np.random.random(11)\n",
     "\n",
-    "fitting = ObjFunc(y=train_y, phi=phi)\n",
+    "# fitting = ObjFunc(y=train_y, phi=phi)\n",
+    "fitting = ObjFuncSDG(y=train_y, phi=phi)\n",
     "\n",
-    "w_res, _, _ = gradient_descent(fitting, w_init, lr=learning_rate, tol=tol, max_steps=n_steps)"
+    "# w_res, _, _ = gradient_descent(fitting, w_init, lr=learning_rate, tol=tol, max_steps=n_steps)\n",
+    "w_res = sgd(fitting, w_init, lr=learning_rate, tol=tol, n_epoch=num_of_epochs, batch_size=batch_size)"
    ],
    "metadata": {
     "collapsed": false,
